--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -285,6 +285,8 @@ allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.156.72.7;
+allow 185.163.204.231;
+allow 185.163.204.41;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -588,7 +590,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 198.167.206.154;
+allow 198.167.206.223;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -898,8 +900,8 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1233,6 +1235,7 @@ allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6cc4::1;
+allow 2a06:1301:4050:100:0:71:127:0;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
@@ -1458,6 +1461,7 @@ allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7::216:3cff:fe6f:c4ca;
+allow 2a0e:bfc7::216:3cff:fe98:45cb;
 allow 2a0e:bfc7::216:3cff:fece:19ec;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
@@ -1607,6 +1611,7 @@ allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
+allow 45.136.71.127;
 allow 45.137.70.158;
 allow 45.137.99.16;
 allow 45.137.99.182;
@@ -1683,6 +1688,7 @@ allow 45.88.186.92;
 allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
+allow 45.9.156.105;
 allow 45.9.156.161;
 allow 45.9.156.22;
 allow 45.9.168.192;
@@ -1854,6 +1860,9 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
+allow 91.219.236.210;
+allow 91.219.239.2;
+allow 91.219.239.65;
 allow 91.227.114.153;
 allow 91.92.109.126;
 allow 91.92.109.43;
