--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -285,6 +285,8 @@ deny 185.150.28.13;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.156.72.7;
+deny 185.163.204.231;
+deny 185.163.204.41;
 deny 185.165.169.239;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -588,7 +590,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 196.196.200.100;
 deny 196.251.69.116;
-deny 198.167.206.154;
+deny 198.167.206.223;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -898,8 +900,8 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
+deny 23.191.200.27;
 deny 23.191.200.28;
-deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
@@ -1233,6 +1235,7 @@ deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6cc4::1;
+deny 2a06:1301:4050:100:0:71:127:0;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
@@ -1458,6 +1461,7 @@ deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7::216:3cff:fe6f:c4ca;
+deny 2a0e:bfc7::216:3cff:fe98:45cb;
 deny 2a0e:bfc7::216:3cff:fece:19ec;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
@@ -1607,6 +1611,7 @@ deny 45.13.225.69;
 deny 45.13.225.78;
 deny 45.133.74.53;
 deny 45.134.225.36;
+deny 45.136.71.127;
 deny 45.137.70.158;
 deny 45.137.99.16;
 deny 45.137.99.182;
@@ -1683,6 +1688,7 @@ deny 45.88.186.92;
 deny 45.91.250.107;
 deny 45.9.148.50;
 deny 45.9.156.101;
+deny 45.9.156.105;
 deny 45.9.156.161;
 deny 45.9.156.22;
 deny 45.9.168.192;
@@ -1854,6 +1860,9 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
+deny 91.219.236.210;
+deny 91.219.239.2;
+deny 91.219.239.65;
 deny 91.227.114.153;
 deny 91.92.109.126;
 deny 91.92.109.43;
