--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -285,6 +285,8 @@ set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.156.72.7;
+set_real_ip_from 185.163.204.231;
+set_real_ip_from 185.163.204.41;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -588,7 +590,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
 set_real_ip_from 196.251.69.116;
-set_real_ip_from 198.167.206.154;
+set_real_ip_from 198.167.206.223;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -898,8 +900,8 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
@@ -1233,6 +1235,7 @@ set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
+set_real_ip_from 2a06:1301:4050:100:0:71:127:0;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
 set_real_ip_from 2a06:1700:0:12::3;
@@ -1458,6 +1461,7 @@ set_real_ip_from 2a0e:bfc0:0:2::8a62;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:bfc7::216:3cff:fe6f:c4ca;
+set_real_ip_from 2a0e:bfc7::216:3cff:fe98:45cb;
 set_real_ip_from 2a0e:bfc7::216:3cff:fece:19ec;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
@@ -1607,6 +1611,7 @@ set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.136.71.127;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.137.99.16;
 set_real_ip_from 45.137.99.182;
@@ -1683,6 +1688,7 @@ set_real_ip_from 45.88.186.92;
 set_real_ip_from 45.91.250.107;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
+set_real_ip_from 45.9.156.105;
 set_real_ip_from 45.9.156.161;
 set_real_ip_from 45.9.156.22;
 set_real_ip_from 45.9.168.192;
@@ -1854,6 +1860,9 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
+set_real_ip_from 91.219.236.210;
+set_real_ip_from 91.219.239.2;
+set_real_ip_from 91.219.239.65;
 set_real_ip_from 91.227.114.153;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
