--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -566,8 +566,10 @@ allow 194.15.115.212;
 allow 194.15.36.117;
 allow 194.163.157.49;
 allow 194.26.192.177;
+allow 194.26.192.22;
 allow 194.26.192.77;
 allow 194.53.137.102;
+allow 194.55.167.14;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -792,9 +794,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -961,6 +965,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.253.247.27;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
