--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -404,6 +404,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -595,6 +596,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
+deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
 deny 2a0c:e300:b:b::b;
@@ -751,4 +753,5 @@ deny 2a12:bec4:1821:3a7::a;
 deny 2a12:bec4:1821:3a8::a;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
+deny 2a14:c380:280:6::a;
 deny 2c0f:6c0:0:d::d28b;
