--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -450,6 +450,7 @@ set_real_ip_from 185.244.192.184;
 set_real_ip_from 185.246.128.161;
 set_real_ip_from 185.246.188.115;
 set_real_ip_from 185.246.188.116;
+set_real_ip_from 185.246.188.117;
 set_real_ip_from 185.246.188.149;
 set_real_ip_from 185.246.188.73;
 set_real_ip_from 185.246.188.74;
@@ -907,6 +908,7 @@ set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
@@ -1442,6 +1444,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:29;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:38;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:44;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
+set_real_ip_from 2a0e:97c0:3e3:1bb::3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
@@ -1584,6 +1587,7 @@ set_real_ip_from 37.114.50.27;
 set_real_ip_from 37.114.63.5;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.221.208.71;
+set_real_ip_from 37.221.93.88;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.168;
 set_real_ip_from 37.228.129.189;
@@ -1888,6 +1892,7 @@ set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.156.152.234;
+set_real_ip_from 94.156.152.8;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.230.208.147;
