--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -142,7 +142,6 @@ allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.44.47;
 allow 151.243.109.167;
-allow 151.243.213.150;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
@@ -151,6 +150,7 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.53.58.161;
+allow 157.66.25.92;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -198,6 +198,7 @@ allow 173.224.219.44;
 allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.140.210;
@@ -566,7 +567,6 @@ allow 194.26.192.177;
 allow 194.26.192.22;
 allow 194.26.192.77;
 allow 194.53.137.102;
-allow 194.55.167.14;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -903,6 +903,7 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -1163,6 +1164,7 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1407,7 +1409,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
-allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
@@ -1561,9 +1562,6 @@ allow 2a12:a800:9:1:193:26:115:82;
 allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
-allow 2a12:bec4:1821:3a6::a;
-allow 2a12:bec4:1821:3a7::a;
-allow 2a12:bec4:1821:3a8::a;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
 allow 2a14:c380:280:6::a;
@@ -1714,8 +1712,6 @@ allow 51.161.198.74;
 allow 51.222.142.67;
 allow 51.38.225.46;
 allow 51.68.226.107;
-allow 5.181.177.130;
-allow 5.181.177.245;
 allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
@@ -1808,7 +1804,6 @@ allow 82.118.248.205;
 allow 82.153.138.125;
 allow 82.153.138.241;
 allow 82.153.138.7;
-allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
