--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -351,6 +351,7 @@ deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -595,7 +596,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
-deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
 deny 2a0c:e300:b:b::b;
@@ -749,9 +749,6 @@ deny 2a12:a800:9:1:193:26:115:82;
 deny 2a12:a800:9:1:45:83:31:79;
 deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
-deny 2a12:bec4:1821:3a6::a;
-deny 2a12:bec4:1821:3a7::a;
-deny 2a12:bec4:1821:3a8::a;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2a14:c380:280:6::a;
