--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -123,7 +123,6 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.72.79.38;
-allow 13.231.183.75;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -567,6 +566,7 @@ allow 194.26.192.177;
 allow 194.26.192.22;
 allow 194.26.192.77;
 allow 194.53.137.102;
+allow 194.55.167.14;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -902,12 +902,10 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1219,6 +1217,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1409,6 +1408,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
@@ -1553,7 +1553,6 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:53;
 allow 2a12:a800:2:1:45:80:158:75;
 allow 2a12:a800:2:1:45:80:158:93;
-allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:123;
 allow 2a12:a800:9:1:193:26:115:140;
 allow 2a12:a800:9:1:193:26:115:43;
@@ -1692,7 +1691,6 @@ allow 45.9.156.105;
 allow 45.9.156.161;
 allow 45.9.156.22;
 allow 45.9.168.192;
-allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
 allow 45.95.169.110;
@@ -1717,6 +1715,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1851,12 +1850,6 @@ allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
-allow 91.208.75.153;
-allow 91.208.75.156;
-allow 91.208.75.178;
-allow 91.208.75.239;
-allow 91.208.75.3;
-allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.227.114.153;
 allow 91.92.109.126;
