--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -406,6 +406,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -596,6 +597,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
@@ -740,7 +742,6 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:53;
 allow 2a12:a800:2:1:45:80:158:75;
 allow 2a12:a800:2:1:45:80:158:93;
-allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:123;
 allow 2a12:a800:9:1:193:26:115:140;
 allow 2a12:a800:9:1:193:26:115:43;
